Fix flaky toBlob tests

Some layout tests are flaky on WebKit Leak bot due to m_document introduced to
CanvasAsyncBlobCreator in https://codereview.chromium.org/2143353002.

TBR=haraken@chromium.org
BUG=628308

Review-Url: https://codereview.chromium.org/2149233004
Cr-Commit-Position: refs/heads/master@{#405622}

Former-commit-id: 20989491201825820c93697de6d92d3b148b10b5